Fix author info color in dark mode

--- a/src/components/menu-bar/author-info.css
+++ b/src/components/menu-bar/author-info.css
@@ -2,7 +2,7 @@
 @import "../../css/units.css";
 
 .author-info {
-    color: $ui-white;
+    color: $menu-bar-foreground;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: flex;
     justify-content: flex-start;
